# django-video-encoding

./: .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTORS  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pyproject.toml.rej  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml  update.yml
test_proj/: conftest.py  manage.py  settings.py  urls.py
test_proj/media_library/: admin.py  models.py  views.py
test_proj/media_library/migrations/: 0001_initial.py  0002_auto_20160704_1656.py
test_proj/media_library/templates/: video_form.html
test_proj/media_library/tests/: test_admin.py  test_encoding.py  test_ffmpeg_backend.py  test_fields.py  test_files.py  test_managers.py  test_signals.py
video_encoding/: admin.py  config.py  exceptions.py  fields.py  files.py  forms.py  manager.py  models.py  signals.py  tasks.py  utils.py
video_encoding/backends/: __init__.py  base.py  ffmpeg.py
video_encoding/migrations/: 0001_initial.py  0002_auto_20170726_0950.py  0002_update_field_definitions.py
