[tool.poetry]
name = "django-video-encoding"
version = "0.4.0"
description = "django-video-encoding helps to convert your videos into different formats and resolutions."
authors = ["Alexander Frenzel <alex@relatedworks.com>"]

readme = "README.rst"
license = "BSD-3-CLAUSE"


homepage = "https://github.com/escaped/django-video-encoding"
repository = "https://github.com/escaped/django-video-encoding"
documentation = "https://github.com/escaped/django-video-encoding/blob/master/README.rst"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
  { include = "video_encoding" },
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"

django-appconf = "^1.0"
shutilwhich = "^1.1"
pillow = "^5.0"
six = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
pdbpp = "^0.9.2"
pytest-django = "^3.4"
pytest-mock = "^1.10"
django-webtest = "^1.9"
tox = "^3.5"
flake8-isort = "^2.5"
pytest-cov = "^2.6"
pytest-pythonpath = "^0.7.3"
pytest-flake8 = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
