[tool.poetry]
name = "django-video-encoding"
version = "1.0.0"
description = "django-video-encoding helps to convert your videos into different formats and resolutions."
authors = [
    "Alexander Frenzel <alex@relatedworks.com>",
]

license = "BSD-3-Clause"
readme = "README.md"

documentation = "https://github.com/escaped/django-video-encoding/blob/master/README.md"
homepage = "https://github.com/escaped/django-video-encoding"
repository = "https://github.com/escaped/django-video-encoding"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
  { include = "video_encoding" },
]

[tool.poetry.dependencies]
python = ">=3.6.1, <4.0"

django = ">=2.2"

django-appconf = "^1.0"
pillow = ">=5.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
better-exceptions = "^0.3.2"
black = "^20.8b1"
flake8 = "^3.8.3"
flake8-bugbear = "^20.11.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.3.1"
flake8-debugger = "^4.0.0"
isort = "^5.5.2"
mypy = "^0.800"
pdbpp = "^0.10.2"
pep8-naming = "^0.11.1"
pre-commit = "^2.7.1"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-django = "^3.9.0"
pytest-mock = "^3.3.1"
tox = "^3.20.0"
tox-gh-actions = "^1.3.0"
matchlib = "^0.2.1"

[tool.black]
line-length = 88
skip-string-normalization = true
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

